--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,17 @@ html {
   box-sizing: inherit;
 }
 
+a {
+  color: #E20613;
+  text-decoration: none;
+}
+
 body {
   background: #2C2141;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .bussines-card {
@@ -25,19 +34,37 @@ body {
 }
 
 .bussines-card__name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 36px;
+  margin: 0;
 
 }
 
 .bussines-card__position {
-
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-size: 16px;
+  margin: 0;
 }
 
 .bussines-card__description {
 
 }
 
+.container {
+  
+}
 
+.special {
+  font-weight: normal;
+  color: #ED6D05;
+}
 
 .main {
-
+  background-color: #F8F8F8;
+  width: 624px;
+  border-radius: 16px;
+  padding: 32px;
+  margin: 16px;
 }
