--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ a {
 
 body {
   background: #2C2141;
-  font-family: Arial, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,7 +33,8 @@ body {
 }
 
 .bussines-card__header {
-
+  margin: 0;
+  margin-bottom: 24px;
 }
 
 .bussines-card__name {
@@ -41,13 +42,13 @@ body {
   font-size: 36px;
   margin: 0;
 
+
 }
 
 .bussines-card__position {
   font-style: italic;
   font-size: 16px;
   margin: 0;
-  margin-bottom: 24px;
 }
 
 .bussines-card__description {
