--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@ html {
 }
 
 a {
-  color: #E20613;
+  color: #e20613;
   text-decoration: none;
 }
 
 body {
-  background: #2C2141;
+  background: #2c2141;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
@@ -24,12 +24,14 @@ body {
 
 .bussines-card {
   display: flex;
+  flex-shrink: 0;
 }
 
 .bussines-card__avatar {
   margin-right: 32px;
-  width: 148px;
-  height: 148px;
+  width: 100%;
+  height: 100%;
+  min-width: 0;
 }
 
 .bussines-card__header {
@@ -41,8 +43,6 @@ body {
   font-weight: normal;
   font-size: 36px;
   margin: 0;
-
-
 }
 
 .bussines-card__position {
@@ -58,11 +58,11 @@ body {
 
 .special {
   font-weight: normal;
-  color: #ED6D05;
+  color: #ed6d05;
 }
 
 .main {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   width: 624px;
   border-radius: 16px;
   padding: 32px;
