--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,8 @@ body {
 
 .bussines-card__avatar {
   margin-right: 32px;
-  width: 100%;
-  height: 100%;
-  min-width: 0;
+  width: 25%;
+  height: 25%;
 }
 
 .bussines-card__header {
@@ -67,4 +66,19 @@ body {
   border-radius: 16px;
   padding: 32px;
   margin: 16px;
+}
+
+@media screen and (max-width: 500px) {
+.bussines-card {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.bussines-card__avatar {
+  margin-right: 0px;
+  margin-bottom: 22px;
+  width: 50%;
+  height: 50%;
+}
 }
